make sure canvas doesn't scroll off screen

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ ul {
 }
 
 #canvas {
+  position: fixed;
   float: left;
 }
 
